some localization changes

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -32,7 +32,13 @@ status.activethreads=laufende Aufgaben
 
 # menu & popup on rightclick
 onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden
-movie.update.datasource=Filmverzeichnis neu einlesen
+update.datasource=Filmverzeichnis neu einlesen
+export.detail=Vorlage beinhaltet Film Detailseiten
+export.setdestination=Verzeichnis auswählen
+export.selectdirectory=Wähle Verzeichnis für den Export
+
+edit.discard=Ãnderungen verwerfen
+
 movie.scrape.selected=Suchen & Scrapen aller ausgewählten Filme
 movie.scrape.selected.desc=Suchen & Scrapen aller ausgewählten Filme
 movie.scrape.selected.force=Automatisch Suchen & Scrapen aller ausgewählten Filme - nimm besten Treffer
@@ -48,12 +54,10 @@ movie.bulkedit=Mehrfach bearbeiten
 movie.bulkedit.desc=Ändere Genres, Markierungen, Film Sets und gesehen/ungesehen für alle selektierten Filme
 
 movie.export=Exportiere Filmliste(n) von selektierten Filmen
-movie.export.detail=Vorlage beinhaltet Film Detailseiten
-movie.export.setdestination=Verzeichnis auswählen
-movie.export.selectdirectory=Wähle Verzeichnis für den Export
 
 movie.edit=Film bearbeiten
-movie.edit.discard=Änderungen verwerfen
+
+movie.edit.abortqueue.desc=Alle Filmänderungen abbrechen
 
 movie.inmovieset=Film in Filmset
 movie.notinmovieset=Film in keinem Filmset
@@ -99,8 +103,6 @@ trailer.remove=ausgewählten Film Trailer entfernen
 tag.add=Markierung hinzufügen
 tag.remove=ausgewählte Markierung entfernen
 
-queue.abort.desc=Abort editing all selected movies
-
 sort.ascending=aufsteigend
 sort.descending=absteigend
 
@@ -136,7 +138,7 @@ Settings.proxyhost=Host
 Settings.proxyport=Port
 Settings.proxyuser=Benutzername
 Settings.proxypass=Passwort
-Settings.clearCache=Cache beim Beenden löschen
+Settings.clearhttpcache=HTTP Cache beim Beenden löschen
 
 # image settings
 Settings.poster=Poster und Fanart
