--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -39,7 +39,13 @@ status.queuesize=Queue:
 
 # menu & popup on rightclick
 onlyoneoperation=Only one operation at one time is allowed
-movie.update.datasource=Update data sources
+update.datasource=Update data sources
+export.detail=Template contains detail pages
+export.setdestination=Set export destination
+export.selectdirectory=select export directory
+
+movie.edit.discard=Discard changes
+
 movie.scrape.selected=Search & scrape selected movie(s)
 movie.scrape.selected.desc=Search & scrape selected movie(s)
 movie.scrape.selected.force=Search & scrape selected movie(s) - force best match
@@ -55,12 +61,10 @@ movie.bulkedit=Bulk editing
 movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
 
 movie.export=Export selected movie(s)
-movie.export.detail=Template contains detail pages
-movie.export.setdestination=Set export destination
-movie.export.selectdirectory=select export directory
 
 movie.edit=Edit movie
-movie.edit.discard=Discard changes
+
+movie.edit.abortqueue.desc=Abort editing all selected movies
 
 movie.inmovieset=Movies in a movieset
 movie.notinmovieset=Movies not in a movieset
@@ -123,8 +127,6 @@ trailer.remove=Remove selected trailer
 tag.add=Add tag
 tag.remove=Remove selected tag
 
-queue.abort.desc=Abort editing all selected movies
-
 sort.ascending=Ascending
 sort.descending=Descending
 
@@ -162,7 +164,7 @@ Settings.proxyhost=Host
 Settings.proxyport=Port
 Settings.proxyuser=Username
 Settings.proxypass=Password
-Settings.clearCache=Clear cache on shutdown
+Settings.clearhttpcache=Clear HTTP cache on shutdown
 
 # image settings
 Settings.poster=Poster and Fanart
@@ -213,6 +215,8 @@ Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, al
 
 # tv shows
 tvshow.edit=Edit TV show
+tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
+tvshow.change=Change TV show
 
 tvshowepisode.scrape=Scrape episode metadata
 
