some localizations several improvements of tv shows

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -37,7 +37,7 @@ export.detail=Vorlage beinhaltet Film Detailseiten
 export.setdestination=Verzeichnis auswählen
 export.selectdirectory=Wähle Verzeichnis für den Export
 
-edit.discard=Ãnderungen verwerfen
+edit.discard=Änderungen verwerfen
 
 movie.scrape.selected=Suchen & Scrapen aller ausgewählten Filme
 movie.scrape.selected.desc=Suchen & Scrapen aller ausgewählten Filme
@@ -166,10 +166,11 @@ Settings.certificationCountry=lokalisierte Altersbeschränkung
 Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Auswahl)
 
 # movie settings
-Settings.datasource=Film Verzeichnis
+Settings.movie.datasource=Film Verzeichnis
+Settings.movie.datasource.remove.info=Wenn Du den Pfad %s entfernst, werden auch alle Filme mit dem Pfad aus der DB entfernt. Weitermachen?
+
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
 Settings.datasource.remove=Film Verzeichnis entfernen
-Settings.datasource.remove.info=Wenn Du den Pfad %s entfernst, werden auch alle Filme mit dem Pfad aus der DB entfernt. Weitermachen?
 Settings.nfoFormat=NFO Format
 Settings.nofFileNaming=NFO Dateiname
 Settings.filetypes=Dateitypen
@@ -179,16 +180,21 @@ Settings.titlePrefix=Titel Präfix
 Settings.renamer=Film Dateien umbenennen 
 Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
-Settings.renamer.info=Verfügbare Werte\r\n$T = Titel\r\n$O = Original Titel\r\n$1 = Erster Buchstabe des Titels\r\n$Y = Jahr\r\n$I = IMDB Nummer\r\n$E = Titel sortiert (s.r.)\r\n$R = Video Auflösung\r\n$A = Audio Codec + Kanäle\r\n$V = Video Codec + Format
-Settings.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel:\nFilmverzeichnis = C:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname = $T\n\nErgebnis:\nVerzeichnis = C:\\Filme\\A\\Aladdin [1992]\nDateiname = Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
+
+Settings.movie.renamer.info=Verfügbare Werte\r\n$T = Titel\r\n$O = Original Titel\r\n$1 = Erster Buchstabe des Titels\r\n$Y = Jahr\r\n$I = IMDB Nummer\r\n$E = Titel sortiert (s.r.)\r\n$R = Video Auflösung\r\n$A = Audio Codec + Kanäle\r\n$V = Video Codec + Format
+Settings.movie.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel:\nFilmverzeichnis = C:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname = $T\n\nErgebnis:\nVerzeichnis = C:\\Filme\\A\\Aladdin [1992]\nDateiname = Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
 
 # metatags
+metatag.actors=Schauspieler
 metatag.artwork=Artwork
 metatag.audiochannels=AKanäle
 metatag.audiocodec=ACodec
 metatag.cast=Besetzung
 metatag.certification=Altersbeschränkung
 metatag.dateadded=hinzugefügt am
+metatag.details=Detail
+metatag.details2=Detail 2
+metatag.director=Regie
 metatag.filename=Dateiname
 metatag.files=Dateien
 metatag.genre=Genre
@@ -221,14 +227,18 @@ metatag.url=Url
 metatag.videobitrate=VBitrate
 metatag.videocodec=VCodec
 metatag.watched=bereits angesehen
+metatag.writer=Drehbuch
 metatag.year=Jahr
+metatag.mediainformation=Medien Informationen
+metatag.trailer=Film Trailer
 
-moviechooser.nothingfound=nichts gefunden
-moviechooser.search=Film suchen
-moviechooser.scrape=Scrape folgende Filme
-moviechooser.scrapeing=Scrapen:
-moviechooser.searchingfor=Suchen nach: 
-moviechooser.searchresult=Suchergebnis 
+chooser.nothingfound=nichts gefunden
+chooser.scrapeing=Scrapen:
+chooser.searchingfor=Suchen nach: 
+chooser.searchresult=Suchergebnis
+
+moviechooser.scrape=Scrape folgende Daten
+moviechooser.search=Film suchen 
 
 movieextendedsearch.options=Erweiterte Filter und Sortierungsmöglichkeiten
 movieextendedsearch.filterby=filtern nach
@@ -239,13 +249,3 @@ movieextendedsearch.cast=Besetzung
 movieextendedsearch.tag=Markierung
 movieextendedsearch.movieset=Filme in Filmsets
 movieextendedsearch.sortby=sortiert nach
-
-movieinformation.details=Detail
-movieinformation.details2=Detail 2
-movieinformation.overview=Übersicht
-movieinformation.director=Regie
-movieinformation.writer=Drehbuch
-movieinformation.cast=Besetzung
-movieinformation.actors=Schauspieler
-movieinformation.mediainformation=Medien Informationen
-movieinformation.trailer=Film Trailer
