--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -63,7 +63,6 @@ movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selec
 movie.export=Export selected movie(s)
 
 movie.edit=Edit movie
-
 movie.edit.abortqueue.desc=Abort editing all selected movies
 
 movie.inmovieset=Movies in a movieset
@@ -192,10 +191,12 @@ Settings.certificationCountry=Certification country
 Settings.default.autoscrape=automatically scrape images (without selection)
 
 # movie settings
-Settings.datasource=Datasources
+Settings.movie.datasource=Datasources
+Settings.movie.datasource.remove.info=If you remove %s from your data sources, all movies inside this path will also be removed. Continue?
+
 Settings.datasource.folderchooser=Add datasource
 Settings.datasource.remove=Remove datasource
-Settings.datasource.remove.info=If you remove %s from your data sources, all movies inside this path will also be removed. Continue?
+
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
 Settings.filetypes=Filetypes
@@ -205,8 +206,12 @@ Settings.titlePrefix=Title prefixes
 Settings.renamer=Renamer
 Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
-Settings.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$Y = Year\r\n$I = IMDB number\r\n$E = Sort title\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
-Settings.renamer.example=Choose a folder and file renaming pattern.\nExample:\nDatasource = /media/movies\nFolder name = $1/$T [$Y]\nFile name = $T\n\nResult:\nFolder name = /media/movies/A/Aladdin [1992]/\nFile name = Aladdin.avi\n\n\n\nIf fields are empty, the renaming will be skipped!
+
+Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$Y = Year\r\n$I = IMDB number\r\n$E = Sort title\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
+Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nExample:\nDatasource = /media/movies\nFolder name = $1/$T [$Y]\nFile name = $T\n\nResult:\nFolder name = /media/movies/A/Aladdin [1992]/\nFile name = Aladdin.avi\n\n\n\nIf fields are empty, the renaming will be skipped!
+
+Settings.tvshow.renamer.info=ToDo
+Settings.tvshow.renamer.example=ToDo
 
 # tv show settings
 Settings.tvshowdatasource=TV show datasources
@@ -221,12 +226,17 @@ tvshow.change=Change TV show
 tvshowepisode.scrape=Scrape episode metadata
 
 # metatags
+metatag.actors=Actors
 metatag.artwork=Artwork
 metatag.audiochannels=AChannels
 metatag.audiocodec=ACodec
 metatag.cast=Cast
 metatag.certification=Certification
 metatag.dateadded=Date Added
+metatag.details=Details
+metatag.details2=Details 2
+metatag.director=Director
+metatag.episode=Episode
 metatag.filename=Filename
 metatag.files=Files
 metatag.genre=Genres
@@ -246,10 +256,12 @@ metatag.rating=Rating
 metatag.resolution=Resolution
 metatag.role=Role
 metatag.runtime=Runtime
+metatag.season=Season
 metatag.size=Size
 metatag.sorttitle=Sorttitle
 metatag.source=Source
 metatag.spokenlanguages=Spoken languages
+metatag.studio=Studio
 metatag.subtitles=Subtitles
 metatag.tagline=Tagline
 metatag.tags=Tags
@@ -261,14 +273,18 @@ metatag.url=Url
 metatag.videobitrate=VBitrate
 metatag.videocodec=VCodec
 metatag.watched=Watched
+metatag.writer=Writer
 metatag.year=Year
+metatag.mediainformation=Media Information
+metatag.trailer=Trailer
 
-moviechooser.nothingfound=nothing found
+chooser.nothingfound=nothing found
+chooser.scrapeing=scraping:
+chooser.searchingfor=searching for: 
+chooser.searchresult=Search result 
+chooser.scrape=Scrape following items
+
 moviechooser.search=Search movie
-moviechooser.scrape=Scrape following items
-moviechooser.scrapeing=scraping:
-moviechooser.searchingfor=searching for: 
-moviechooser.searchresult=Search result 
 
 movieextendedsearch.options=Extended filter and sort options
 movieextendedsearch.filterby=filter by
@@ -279,15 +295,5 @@ movieextendedsearch.cast=Cast member
 movieextendedsearch.tag=Tag
 movieextendedsearch.movieset=Movies in movieset
 movieextendedsearch.sortby=sort by
-
-movieinformation.details=Details
-movieinformation.details2=Details 2
-movieinformation.overview=Overview
-movieinformation.director=Director
-movieinformation.writer=Writer
-movieinformation.cast=Cast
-movieinformation.actors=Actors
-movieinformation.mediainformation=Media Information
-movieinformation.trailer=Trailer
 
 BUNDLE.getString("")); //$NON-NLS-1$
