improved caching added debug option to clear image cache

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -25,7 +25,8 @@ tmm.settings=Settings
 tmm.exit=Exit
 tmm.exit.runningtasks=Are you sure you want to close tinyMediaManager?\nSome threads seem to be still running...
 tmm.exit.confirmation=Exit Confirmation
-tmm.clearcache=clear cache
+tmm.clearurlcache=clear url cache
+tmm.clearimagecache=clear image cache
 tmm.cleardatabase=initialize database
 tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
 tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
