retry search if movie still has a year in its name (we did not strip it off on the scanner, for various reasons) use movie folder scanner name for TV shows fix some typos

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -2,7 +2,7 @@
 Button.ok=Ok
 Button.cancel=Abbrechen
 Button.add=Hinzufügen
-Button.addfile=Detai hinzufügen
+Button.addfile=Datei hinzufügen
 Button.remove=Entfernen
 Button.continue=Weitermachen
 Button.abort=Abbrechen
