started with season posters (unfinished) added a menu for tv shows changes menu for movies

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -11,6 +11,7 @@ Button.close=Close
 Button.search=Search
 Button.save=Save
 Button.scrape=Scrape
+Button.edit=Edit
 
 # vertical tabs (singular / plural)
 tmm.movies=Movies
@@ -48,7 +49,6 @@ export.selectdirectory=select export directory
 movie.edit.discard=Discard changes
 
 movie.scrape.selected=Search & scrape selected movie(s)
-movie.scrape.selected.desc=Search & scrape selected movie(s)
 movie.scrape.selected.force=Search & scrape selected movie(s) - force best match
 movie.scrape.selected.force.desc=Search & scrape selected movie(s) without user interaction; forces best match
 movie.scrape.unscraped=Search & scrape all unscraped movie(s) - force best match
@@ -104,6 +104,7 @@ image.choose.file=Choose file
 image.choose.fanart=Choose fanart
 image.choose.poster=Choose poster
 image.choose.banner=Choose banner
+image.choose.season=Choose season poster
 image.extrathumbs.markall=Mark all extrathumbs
 image.extrathumbs.unmarkall=Unmark all extrathumbs
 image.extrafanart.markall=Mark all extrafanart
@@ -220,8 +221,10 @@ Settings.tvshowdatasource.folderchooser=add TV show datasource
 Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will also be removed. Continue?
 
 # tv shows
-tvshow.edit=Edit TV show
+tvshow.scrape.selected=Search & scrape selected TV show(s)
+tvshow.edit=Edit selected TV show(s)/episode(s)
 tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
+tvshow.changeseasonposter=Change season poster of selected season(s)
 tvshow.change=Change TV show
 
 tvshowepisode.scrape=Scrape episode metadata
