--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -46,7 +46,7 @@ export.detail=Template contains detail pages
 export.setdestination=Set export destination
 export.selectdirectory=select export directory
 
-movie.edit.discard=Discard changes
+edit.discard=Discard changes
 
 movie.scrape.selected=Search & scrape selected movie(s)
 movie.scrape.selected.force=Search & scrape selected movie(s) - force best match
