some changes to tv shows (mainly corrected things of ysmp's feedback)

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -255,6 +255,7 @@ metatag.originaltitle=Original Title
 metatag.path=Path
 metatag.plot=Plot
 metatag.production=Production
+metatag.premiered=Premiered
 metatag.quality=Quality
 metatag.rating=Rating
 metatag.resolution=Resolution
@@ -265,6 +266,7 @@ metatag.size=Size
 metatag.sorttitle=Sorttitle
 metatag.source=Source
 metatag.spokenlanguages=Spoken languages
+metatag.status=Status
 metatag.studio=Studio
 metatag.subtitles=Subtitles
 metatag.tagline=Tagline
