switched from beansbinding (1.2.1) to betterbeansbinding (1.3.0) added some functionality to the image cache added sorting order to media files added votes to tv shows/episodes fixed different things

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -26,8 +26,10 @@ tmm.settings=Settings
 tmm.exit=Exit
 tmm.exit.runningtasks=Are you sure you want to close tinyMediaManager?\nSome threads seem to be still running...
 tmm.exit.confirmation=Exit Confirmation
+tmm.cache=Cache
 tmm.clearurlcache=clear url cache
 tmm.clearimagecache=clear image cache
+tmm.rebuildimagecache=rebuild image cache
 tmm.cleardatabase=initialize database
 tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
 tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
@@ -166,6 +168,8 @@ Settings.proxyport=Port
 Settings.proxyuser=Username
 Settings.proxypass=Password
 Settings.clearhttpcache=Clear HTTP cache on shutdown
+Settings.imagecachetype=Image cache type
+Settings.imagecachebackground=Automatically build image cache in background
 
 # image settings
 Settings.poster=Poster and Fanart
