--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -9,17 +9,25 @@ Button.abort=Abbrechen
 Button.abortqueue=Warteschlange abbrechen
 Button.close=Schließen
 Button.search=Suchen
+Button.save=Speichern
+Button.scrape=Scrape
+Button.edit=Bearbeiten
 
-# vertical tabs
+# vertical tabs (singular / plural)
 tmm.movies=Filme
+tmm.movie=Film
 tmm.moviesets=Film Sets
+tmm.movieset=Filmset
+tmm.tvshows=TV Shows
+tmm.tvshow=TV Show
 tmm.settings=Einstellungen
 
 # menu actions
 tmm.exit=Beenden
 tmm.exit.runningtasks=Bist Du sicher, dass Du tinyMediaManager schließen möchtest?\nEinige Aufgaben laufen noch im Hintergrund...
 tmm.exit.confirmation=Wirklich beenden?
-tmm.clearcache=Cache löschen
+tmm.clearurlcache=Url Cache löschen
+tmm.clearimagecache=Bilder Cache löschen
 tmm.cleardatabase=Datenbank neu aufbauen
 tmm.cleardatabase.info=Datenbank initialisiert. Bitte tinyMediaManager neu starten.
 tmm.cleardatabase.error=Ein Fehler ist beim initialisieren aufgetreten. Bitte die Datei 'tmm.odb' selbst löschen.
@@ -29,6 +37,7 @@ tmm.donate=Spenden
 tmm.searchfield=Suchen...
 
 status.activethreads=laufende Aufgaben
+status.queuesize=Warteschlange\:
 
 # menu & popup on rightclick
 onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden
@@ -40,7 +49,6 @@ export.selectdirectory=Wähle Verzeichnis für den Export
 edit.discard=Änderungen verwerfen
 
 movie.scrape.selected=Suchen & Scrapen aller ausgewählten Filme
-movie.scrape.selected.desc=Suchen & Scrapen aller ausgewählten Filme
 movie.scrape.selected.force=Automatisch Suchen & Scrapen aller ausgewählten Filme - nimm besten Treffer
 movie.scrape.selected.force.desc=Automatisch Suchen & Scrapen aller ausgewählten Filme - nimm besten Treffer
 movie.scrape.unscraped=Alle ungescrapten Filme suchen & scrapen - nimm besten Treffer
@@ -56,12 +64,27 @@ movie.bulkedit.desc=Ändere Genres, Markierungen, Film Sets und gesehen/ungesehe
 movie.export=Exportiere Filmliste(n) von selektierten Filmen
 
 movie.edit=Film bearbeiten
-
 movie.edit.abortqueue.desc=Alle Filmänderungen abbrechen
 
 movie.inmovieset=Film in Filmset
 movie.notinmovieset=Film in keinem Filmset
 movie.change=Film wechseln
+
+movieset.add.desc=Filmset hinzufügen
+movieset.remove.desc=Ausgewähltes Filmset entfernen
+movieset.title=Filmset Name
+movieset.search=Suche in TMDB nach Filmset Metadaten
+movieset.tmdb.find=Suche TMDB ID
+movieset.tmdb.desc=Suche TMDB ID für diesen Film
+movieset.tmdb.error=Konnte nichts mit dieser TMDB ID finden. Versuche, nach dem Filmset zu suchen.
+movieset.edit=Filmset bearbeiten
+movieset.parts=Filme im Filmset
+movieset.movie.assign=Filme diesem Filmset zuweisen
+movieset.movie.matched=gefundene Filme
+movieset.movie.remove=Ausgewählten Film von diesem Filmset entfernen.
+movieset.movie.moveup=Ausgewählten Film nach oben verschieben
+movieset.movie.movedown=Ausgewählten Film nach unten verschieben
+movieset.save.desc=Filmset Daten speichern
 
 cast.actor.add=neuen Schauspieler hinzufügen
 cast.actor.remove=Schauspieler entfernen
@@ -80,12 +103,14 @@ image.choose=Wähle ein Bild
 image.choose.file=Wähle eine Datei
 image.choose.fanart=Wähle Fanart
 image.choose.poster=Wähle Poster
+image.choose.banner=Wähle ein Banner
+image.choose.season=Wähle Saison Poster
 image.extrathumbs.markall=Wähle alle Extrathumbs
 image.extrathumbs.unmarkall=Entferne die Auswahl der Extrathumbs
 image.extrafanart.markall=Wähle alle Extratfanarts
 image.extrafanart.unmarkall=Entferne die Auswahl der Extratfanarts
 image.nonefound=kein Bild gefunden
-image.noneselected=kein Bild selektiert!
+image.noneselected=kein Bild selektiert\!
 image.seteselected=Setze selektiertes Bild
 image.download.noid=Keine ID (imdbId oder tmdbId) zum Suchen verfügbar
 image.download.progress=lade Bilder herunter
@@ -106,7 +131,7 @@ tag.remove=ausgewählte Markierung entfernen
 sort.ascending=aufsteigend
 sort.descending=absteigend
 
-tmdb.wrongformat=TMDB Id hat falsches Format:
+tmdb.wrongformat=TMDB Id hat falsches Format\:
 
 BugReport=Fehler melden
 BugReport.name=Name (optional)
@@ -115,8 +140,8 @@ BugReport.description.empty=Keine Beschreibung eingegeben
 BugReport.attachments=Anhang
 BugReport.logs=Log Files
 BugReport.send=Sende Fehlerbericht
-BugReport.send.error=Fehler beim Senden des Fehlerberichts :p
-BugReport.send.ok=Fehlerbericht gesendet - Danke!
+BugReport.send.error=Fehler beim Senden des Fehlerberichts \:p
+BugReport.send.ok=Fehlerbericht gesendet - Danke\!
 
 Feedback=Feedback geben
 Feedback.name=Name (optional)
@@ -124,12 +149,14 @@ Feedback.email=Email (optional)
 Feedback.message=Feedback
 Feedback.message.empty=Feedback ist leer
 Feedback.send.error=Fehler beim Senden vom Feedback
-Feedback.send.ok=Feedback gesendet - Danke!
+Feedback.send.ok=Feedback gesendet - Danke\!
 
 # settings menu (linebreaks with html)
 Settings.movies=Filme
-Settings.scraper=<html><center>Filme -<br>Scraper</center></html>
-Settings.images=<html><center>Filme -<br>Bilder</center></html>
+Settings.scraper=<html><center>Film -<br>Scraper</center></html>
+Settings.images=<html><center>Film -<br>Bilder</center></html>
+Settings.tvshow=TV Shows
+Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
 Settings.general=Allgemein
 
 # general settings
@@ -143,10 +170,10 @@ Settings.clearhttpcache=HTTP Cache beim Beenden löschen
 # image settings
 Settings.poster=Poster und Fanart
 Settings.source=Datenherkunft
-Settings.fanarttv.alert=Achtung: Fanart.tv unterstützt keine Film Poster!
+Settings.fanarttv.alert=Achtung\: Fanart.tv unterstützt keine Film Poster\!
 Settings.moviefilename=<Film Dateiname>
 Settings.tbn.deprecation=.tbn is ein altes Format und wird nicht mehr unterstützt.
-Settings.naming.info=Info: Jede Datei mit .JPG kann möglicherweise ein .PNG herunterladen. Es hängt von der Bild Quelle ab.
+Settings.naming.info=Info\: Jede Datei mit .JPG kann möglicherweise ein .PNG herunterladen. Es hängt von der Bild Quelle ab.
 Settings.enable.extrathumbs=Extrathumbs aktivieren
 Settings.resize.extrathumbs=Extrathumbs auf folgende Breite skalieren
 Settings.enable.extrafanart=Extrafanart aktivieren
@@ -171,11 +198,12 @@ Settings.movie.datasource.remove.info=Wenn Du den Pfad %s entfernst, werden auch
 
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
 Settings.datasource.remove=Film Verzeichnis entfernen
+
 Settings.nfoFormat=NFO Format
 Settings.nofFileNaming=NFO Dateiname
 Settings.filetypes=Dateitypen
 Settings.sorting=Sortierung der Filmliste
-Settings.sorting.info=Folgende Titel Präfixe beeinflussen die Film Sortierung.\n\nBeispiel: Die\nAus 'Die Bourne Identität' wird dann 'Bourne Identität, Die'.\nUm diese Feature auszuschalten, einfach alle Einträge entfernen.
+Settings.sorting.info=Folgende Titel Präfixe beeinflussen die Film Sortierung.\n\nBeispiel\: Die\nAus 'Die Bourne Identität' wird dann 'Bourne Identität, Die'.\nUm diese Feature auszuschalten, einfach alle Einträge entfernen.
 Settings.titlePrefix=Titel Präfix
 Settings.renamer=Film Dateien umbenennen 
 Settings.renamer.folder=Verzeichnis
@@ -183,6 +211,23 @@ Settings.renamer.file=Dateiname
 
 Settings.movie.renamer.info=Verfügbare Werte\r\n$T = Titel\r\n$O = Original Titel\r\n$1 = Erster Buchstabe des Titels\r\n$Y = Jahr\r\n$I = IMDB Nummer\r\n$E = Titel sortiert (s.r.)\r\n$R = Video Auflösung\r\n$A = Audio Codec + Kanäle\r\n$V = Video Codec + Format
 Settings.movie.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel:\nFilmverzeichnis = C:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname = $T\n\nErgebnis:\nVerzeichnis = C:\\Filme\\A\\Aladdin [1992]\nDateiname = Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
+
+Settings.tvshow.renamer.info=ToDo
+Settings.tvshow.renamer.example=ToDo
+
+# tv show settings
+Settings.tvshowdatasource=TV Show Ordner
+Settings.tvshowdatasource.folderchooser=neuen TV Show Ordner hinzufügen
+Settings.tvshowdatasource.remove.info=Wenn %s entfernt wird, werden auch alle TV Shows und Episoden aus der DB entfernt. Weitermachen?
+
+# tv shows
+tvshow.scrape.selected=Suchen & Scrapen aller ausgewählten TV Shows
+tvshow.edit=Ausgewählte TV Show(s)/Episode(s) bearbeiten
+tvshow.edit.abortqueue.desc=Breche Bearbeitung aller selektierten TV Shows ab
+tvshow.changeseasonposter=Ändere Saison Poster von ausgewählten Saison(en)
+tvshow.change=Wechsle TV Show
+
+tvshowepisode.scrape=Scrape Episoden Metadaten
 
 # metatags
 metatag.actors=Schauspieler
@@ -195,6 +240,7 @@ metatag.dateadded=hinzugefügt am
 metatag.details=Detail
 metatag.details2=Detail 2
 metatag.director=Regie
+metatag.episode=Episode
 metatag.filename=Dateiname
 metatag.files=Dateien
 metatag.genre=Genre
@@ -209,19 +255,25 @@ metatag.originaltitle=Original Titel
 metatag.path=Pfad
 metatag.plot=Inhaltsangabe
 metatag.production=Produktion
+metatag.premiered=Erstausstrahlung
 metatag.quality=Qualität
 metatag.rating=Bewertung
 metatag.resolution=Auflösung
 metatag.role=Rolle
 metatag.runtime=Laufzeit
+metatag.season=Saison
 metatag.size=Größe
 metatag.sorttitle=Sortierungstitel
 metatag.source=Herkunft
 metatag.spokenlanguages=Sprache(n)
+metatag.status=Status
+metatag.studio=Studio
+metatag.subtitles=Untertitel
 metatag.tagline=kurze Inhaltsangabe
 metatag.tags=Markierungen
 metatag.title=Titel
 metatag.tmdb=TMDB Id
+metatag.tvdb=TvDB ID
 metatag.trailer=Film Trailer
 metatag.url=Url
 metatag.videobitrate=VBitrate
@@ -236,9 +288,9 @@ chooser.nothingfound=nichts gefunden
 chooser.scrapeing=Scrapen:
 chooser.searchingfor=Suchen nach: 
 chooser.searchresult=Suchergebnis
+chooser.scrape=Scrape folgende Daten
 
-moviechooser.scrape=Scrape folgende Daten
-moviechooser.search=Film suchen 
+moviechooser.search=Film suchen
 
 movieextendedsearch.options=Erweiterte Filter und Sortierungsmöglichkeiten
 movieextendedsearch.filterby=filtern nach
