little work on image cache added "go to tmm install folder" menu item

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -33,6 +33,7 @@ tmm.rebuildimagecache=rebuild image cache
 tmm.cleardatabase=initialize database
 tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
 tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
+tmm.gotoinstalldir=Open tMM install directory in a file browser 
 tmm.debug=Debug
 tmm.about=About
 tmm.donate=Donate
@@ -168,6 +169,7 @@ Settings.proxyport=Port
 Settings.proxyuser=Username
 Settings.proxypass=Password
 Settings.clearhttpcache=Clear HTTP cache on shutdown
+Settings.imagecache=Enable image cache
 Settings.imagecachetype=Image cache type
 Settings.imagecachebackground=Automatically build image cache in background
 
