--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -230,6 +230,7 @@ Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, al
 tvshow.scrape.selected=Search & scrape selected TV show(s)
 tvshow.edit=Edit selected TV show(s)/episode(s)
 tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
+tvshow.remove=Remove selected TV show(s)/episode(s)
 tvshow.changeseasonposter=Change season poster of selected season(s)
 tvshow.change=Change TV show
 
