added tv show bulk editor

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -233,6 +233,8 @@ tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
 tvshow.remove=Remove selected TV show(s)/episode(s)
 tvshow.changeseasonposter=Change season poster of selected season(s)
 tvshow.change=Change TV show
+tvshow.bulkedit=Bulk editing
+tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes 
 
 tvshowepisode.scrape=Scrape episode metadata
 
