added titles sortable for moviesets and tv shows little wording

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -207,10 +207,10 @@ Settings.datasource.remove=Remove datasource
 
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
-Settings.filetypes=Filetypes
-Settings.sorting=Movielist sorting
-Settings.sorting.info=Choose prefixes, which will affect the sort order of the movielist.\n\nExample: The\n'The Bourne Identity' will be shown as 'Bourne Identity, The'\n\nIf you want to disable this feature, just clear the list
-Settings.titlePrefix=Title prefixes
+Settings.videofiletypes=Video filetypes
+Settings.extrafiletypes=Subtitle and additional filetypes
+Settings.sorting=Title sorting
+Settings.sorting.info=Choose prefixes, which will affect the sort order of the lists.\n\nExample: The\n'The Bourne Identity' will be shown as 'Bourne Identity, The'\n\nIf you want to disable this feature, just clear the list
 Settings.renamer=Renamer
 Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
