--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -237,11 +237,13 @@ tvshow.changeseasonposter=Change season poster of selected season(s)
 tvshow.change=Change TV show
 tvshow.bulkedit=Bulk editing
 tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes 
+tvshow.scrapeepisodeseasondata=Scrape season & episode data 
 
 tvshowepisode.scrape=Scrape episode metadata
 
 # metatags
 metatag.actors=Actors
+metatag.aired=Aired
 metatag.artwork=Artwork
 metatag.audiochannels=AChannels
 metatag.audiocodec=ACodec
