added I18N for TV shows

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -169,9 +169,11 @@ Settings.proxyport=Port
 Settings.proxyuser=Username
 Settings.proxypass=Password
 Settings.clearhttpcache=Clear HTTP cache on shutdown
+Settings.cache=Cache
 Settings.imagecache=Enable image cache
 Settings.imagecachetype=Image cache type
 Settings.imagecachebackground=Automatically build image cache in background
+Settings.loglevel=Loglevel
 
 # image settings
 Settings.poster=Poster and Fanart
@@ -254,9 +256,11 @@ metatag.details=Details
 metatag.details2=Details 2
 metatag.director=Director
 metatag.episode=Episode
+metatag.episodes=Episodes
 metatag.filename=Filename
 metatag.files=Files
 metatag.genre=Genres
+metatag.guests=Guests
 metatag.images=Images
 metatag.imdb=IMDB Id
 metatag.minutes=min
@@ -275,6 +279,7 @@ metatag.resolution=Resolution
 metatag.role=Role
 metatag.runtime=Runtime
 metatag.season=Season
+metatag.seasons=Seasons
 metatag.size=Size
 metatag.sorttitle=Sorttitle
 metatag.source=Source
@@ -287,6 +292,8 @@ metatag.tags=Tags
 metatag.title=Title
 metatag.tmdb=TMDB Id
 metatag.tvdb=TheTvDB Id
+metatag.tvshow=TV show
+metatag.tvshows=TV shows
 metatag.trailer=Trailer
 metatag.url=Url
 metatag.videobitrate=VBitrate
