added new version from themoviedb API added panel containing media information fixed several bugs

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -247,23 +247,26 @@ tvshowepisode.scrape=Scrape episode metadata
 metatag.actors=Actors
 metatag.aired=Aired
 metatag.artwork=Artwork
-metatag.audiochannels=AChannels
-metatag.audiocodec=ACodec
+metatag.audio=Audio
 metatag.cast=Cast
 metatag.certification=Certification
+metatag.codec=Codec
 metatag.dateadded=Date Added
 metatag.details=Details
 metatag.details2=Details 2
 metatag.director=Director
 metatag.episode=Episode
 metatag.episodes=Episodes
+metatag.externalfile=External File
 metatag.filename=Filename
 metatag.files=Files
 metatag.genre=Genres
 metatag.guests=Guests
 metatag.images=Images
 metatag.imdb=IMDB Id
+metatag.mediafiletype=Type
 metatag.minutes=min
+metatag.movie=Movie
 metatag.movieset=Movieset
 metatag.name=Name
 metatag.nfo=NFO
@@ -285,7 +288,9 @@ metatag.sorttitle=Sorttitle
 metatag.source=Source
 metatag.spokenlanguages=Spoken languages
 metatag.status=Status
+metatag.stream=Stream
 metatag.studio=Studio
+metatag.subtitle=Subtitle
 metatag.subtitles=Subtitles
 metatag.tagline=Tagline
 metatag.tags=Tags
@@ -296,13 +301,26 @@ metatag.tvshow=TV show
 metatag.tvshows=TV shows
 metatag.trailer=Trailer
 metatag.url=Url
-metatag.videobitrate=VBitrate
-metatag.videocodec=VCodec
+metatag.video=Video
 metatag.watched=Watched
 metatag.writer=Writer
 metatag.year=Year
 metatag.mediainformation=Media Information
+metatag.mediafiles=Media files
 metatag.trailer=Trailer
+
+mediafiletype.unknown=Unknown
+mediafiletype.video=Video
+mediafiletype.audio=Audio
+mediafiletype.subtitle=Subtitle
+mediafiletype.nfo=NFO
+mediafiletype.poster=Poster
+mediafiletype.fanart=Fanart
+mediafiletype.banner=Banner
+mediafiletype.thumb=Thumb
+mediafiletype.trailer=Trailer
+mediafiletype.extrafanart=Extrafanart
+mediafiletype.graphic=Graphic
 
 chooser.nothingfound=nothing found
 chooser.scrapeing=scraping:
