added description of imagelabels fix: multiple posters in the movie under certain circumstances fix: cleaned logs for scraping activities a bit (no more massive spam :) ) fix: extrathumbs/extrafanart is now disabled in tv shows (as its not supported in the moment) some other improvements

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -121,6 +121,10 @@ image.poster.size=Poster size
 image.poster.naming=Poster file naming
 image.fanart.size=Fanart size
 image.fanart.naming=Fanart file naming
+image.notfound.fanart=No fanart found
+image.notfound.poster=No poster found
+image.notfound.banner=No banner found
+image.notfound.thumb=No thumb found
 
 genre.add=Add genre
 genre.remove=Remove genre
@@ -181,7 +185,7 @@ Settings.source=Source
 Settings.fanarttv.alert=Attention: Fanart.tv does not provide poster
 Settings.moviefilename=<movie filename>
 Settings.tbn.deprecation=.tbn is deprecated and will be removed soon
-Settings.naming.info=Note: every file naming option ending with .jpg will alternatively store a png. It depends on the source of the image file
+Settings.naming.info=NOTE: The above options will create a file name with either a .JPG or .PNG extension depending on artwork format/type.
 Settings.enable.extrathumbs=Enable extrathumbs
 Settings.resize.extrathumbs=Resize extrathumbs to (width)
 Settings.enable.extrafanart=Enable extrafanart
