little changes on mediafile/mediainformation panel

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -261,13 +261,14 @@ metatag.details2=Details 2
 metatag.director=Director
 metatag.episode=Episode
 metatag.episodes=Episodes
-metatag.externalfile=External File
+metatag.external=external
 metatag.filename=Filename
 metatag.files=Files
 metatag.genre=Genres
 metatag.guests=Guests
 metatag.images=Images
 metatag.imdb=IMDB Id
+metatag.internal=internal
 metatag.mediafiletype=Type
 metatag.minutes=min
 metatag.movie=Movie
@@ -325,6 +326,8 @@ mediafiletype.thumb=Thumb
 mediafiletype.trailer=Trailer
 mediafiletype.extrafanart=Extrafanart
 mediafiletype.graphic=Graphic
+mediafiletype.movie=Movie
+mediafiletype.episode=Episode
 
 chooser.nothingfound=nothing found
 chooser.scrapeing=scraping:
