prevent concurrent modification wording

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -59,7 +59,7 @@ movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user 
 movie.scrape.metadata=Scrape metadata for selected movie(s)
 movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
 movie.remove=Remove selected movie(s)
-movie.rename=Rename selected movie(s)
+movie.rename=Rename/cleanup selected movie(s)
 movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
 movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
