added audio filetypes to the settings panel

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -215,6 +215,7 @@ Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
 Settings.videofiletypes=Video filetypes
 Settings.extrafiletypes=Subtitle and additional filetypes
+Settings.audiofiletypes=Audio filetypes
 Settings.sorting=Title sorting
 Settings.sorting.info=Choose prefixes, which will affect the sort order of the lists.\n\nExample: The\n'The Bourne Identity' will be shown as 'Bourne Identity, The'\n\nIf you want to disable this feature, just clear the list
 Settings.renamer=Renamer
