--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -26,11 +26,14 @@ tmm.settings=Einstellungen
 tmm.exit=Beenden
 tmm.exit.runningtasks=Bist Du sicher, dass Du tinyMediaManager schließen möchtest?\nEinige Aufgaben laufen noch im Hintergrund...
 tmm.exit.confirmation=Wirklich beenden?
+tmm.cache=Cache
 tmm.clearurlcache=Url Cache löschen
 tmm.clearimagecache=Bilder Cache löschen
+tmm.rebuildimagecache=Bildercache neu aufbauen
 tmm.cleardatabase=Datenbank neu aufbauen
 tmm.cleardatabase.info=Datenbank initialisiert. Bitte tinyMediaManager neu starten.
 tmm.cleardatabase.error=Ein Fehler ist beim initialisieren aufgetreten. Bitte die Datei 'tmm.odb' selbst löschen.
+tmm.gotoinstalldir=TMM Verzeichnis im Dateibrowser öffnen
 tmm.debug=Debug
 tmm.about=Über
 tmm.donate=Spenden
@@ -118,6 +121,10 @@ image.poster.size=Poster Größe
 image.poster.naming=Poster Namenskonvention
 image.fanart.size=Fanart Größe
 image.fanart.naming=Fanart Namenskonvention
+image.notfound.fanart=kein Fanart gefunden
+image.notfound.poster=kein Poster gefunden
+image.notfound.banner=kein Banner gefunden
+image.notfound.thumb=kein Thumb gefunden
 
 genre.add=Genre hinzufügen
 genre.remove=Genre entfernen
@@ -166,6 +173,11 @@ Settings.proxyport=Port
 Settings.proxyuser=Benutzername
 Settings.proxypass=Passwort
 Settings.clearhttpcache=HTTP Cache beim Beenden löschen
+Settings.cache=Cache
+Settings.imagecache=Bilder Cache aktivieren
+Settings.imagecachetype=Bildercache Typ
+Settings.imagecachebackground=Bildercache automatisch im Hintergrund aufbauen
+Settings.loglevel=Loglevel
 
 # image settings
 Settings.poster=Poster und Fanart
@@ -173,7 +185,7 @@ Settings.source=Datenherkunft
 Settings.fanarttv.alert=Achtung\: Fanart.tv unterstützt keine Film Poster\!
 Settings.moviefilename=<Film Dateiname>
 Settings.tbn.deprecation=.tbn is ein altes Format und wird nicht mehr unterstützt.
-Settings.naming.info=Info\: Jede Datei mit .JPG kann möglicherweise ein .PNG herunterladen. Es hängt von der Bild Quelle ab.
+Settings.naming.info=Hinweis\: Die Dateierweiterung der Bilder (.JPG oder .PNG) hängt vom Quellformat der Datei ab.
 Settings.enable.extrathumbs=Extrathumbs aktivieren
 Settings.resize.extrathumbs=Extrathumbs auf folgende Breite skalieren
 Settings.enable.extrafanart=Extrafanart aktivieren
@@ -201,16 +213,16 @@ Settings.datasource.remove=Film Verzeichnis entfernen
 
 Settings.nfoFormat=NFO Format
 Settings.nofFileNaming=NFO Dateiname
-Settings.filetypes=Dateitypen
-Settings.sorting=Sortierung der Filmliste
-Settings.sorting.info=Folgende Titel Präfixe beeinflussen die Film Sortierung.\n\nBeispiel\: Die\nAus 'Die Bourne Identität' wird dann 'Bourne Identität, Die'.\nUm diese Feature auszuschalten, einfach alle Einträge entfernen.
-Settings.titlePrefix=Titel Präfix
-Settings.renamer=Film Dateien umbenennen 
+Settings.videofiletypes=Film Dateierweiterungen
+Settings.extrafiletypes=Untertitel Dateierweiterungen
+Settings.sorting=Titel sortierung
+Settings.sorting.info=Präfix auswählen, welcher die Sortierung der Liste beeinflusst.\n\nZum Beispiel\: Die\n'Die Bourne Identität' wird als 'Bourne Identität, Die' angezeigt/einsortiert\n\nUm dieses Feature auszuschalten, einfach alle Einträge der Liste entfernen.
+Settings.renamer=Film Dateien umbenennen
 Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
 
-Settings.movie.renamer.info=Verfügbare Werte\r\n$T = Titel\r\n$O = Original Titel\r\n$1 = Erster Buchstabe des Titels\r\n$Y = Jahr\r\n$I = IMDB Nummer\r\n$E = Titel sortiert (s.r.)\r\n$R = Video Auflösung\r\n$A = Audio Codec + Kanäle\r\n$V = Video Codec + Format
-Settings.movie.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel:\nFilmverzeichnis = C:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname = $T\n\nErgebnis:\nVerzeichnis = C:\\Filme\\A\\Aladdin [1992]\nDateiname = Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
+Settings.movie.renamer.info=Verfügbare Werte\r\n$T \= Titel\r\n$O \= Original Titel\r\n$1 \= Erster Buchstabe des Titels\r\n$Y \= Jahr\r\n$I \= IMDB Nummer\r\n$E \= Titel sortiert (s.r.)\r\n$R \= Video Auflösung\r\n$A \= Audio Codec + Kanäle\r\n$V \= Video Codec + Format
+Settings.movie.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel\:\nFilmverzeichnis \= C\:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname \= $T\n\nErgebnis\:\nVerzeichnis \= C\:\\Filme\\A\\Aladdin [1992]\nDateiname \= Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
@@ -222,31 +234,44 @@ Settings.tvshowdatasource.remove.info=Wenn %s entfernt wird, werden auch alle TV
 
 # tv shows
 tvshow.scrape.selected=Suchen & Scrapen aller ausgewählten TV Shows
+tvshow.scrape.selected.force=Suchen und Scrapen von ausgewählten TV Shows - automatisch besten Treffer nehmen
+tvshow.scrape.selected.force.desc=Automatisch Suchen & Scrapen aller ausgewählten TV Shows - nimm besten Treffer
 tvshow.edit=Ausgewählte TV Show(s)/Episode(s) bearbeiten
 tvshow.edit.abortqueue.desc=Breche Bearbeitung aller selektierten TV Shows ab
+tvshow.remove=Ausgewählte TV Show(s) / Episoden entfernen
 tvshow.changeseasonposter=Ändere Saison Poster von ausgewählten Saison(en)
 tvshow.change=Wechsle TV Show
+tvshow.bulkedit=Mehrfach bearbeiten
+tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewählten TV Shows ändern
+tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 
 # metatags
 metatag.actors=Schauspieler
+metatag.aired=Erstausstrahlung
 metatag.artwork=Artwork
-metatag.audiochannels=AKanäle
-metatag.audiocodec=ACodec
+metatag.audio=Audio
 metatag.cast=Besetzung
 metatag.certification=Altersbeschränkung
+metatag.codec=Codec
 metatag.dateadded=hinzugefügt am
 metatag.details=Detail
 metatag.details2=Detail 2
 metatag.director=Regie
 metatag.episode=Episode
+metatag.episodes=Episoden
+metatag.external=Extern
 metatag.filename=Dateiname
 metatag.files=Dateien
 metatag.genre=Genre
+metatag.guests=Gastauftritt
 metatag.images=Bilder
 metatag.imdb=IMDB Id
+metatag.internal=Intern
+metatag.mediafiletype=Typ
 metatag.minutes=min
+metatag.movie=Film
 metatag.movieset=Filmset
 metatag.name=Name
 metatag.nfo=NFO
@@ -262,31 +287,51 @@ metatag.resolution=Auflösung
 metatag.role=Rolle
 metatag.runtime=Laufzeit
 metatag.season=Saison
+metatag.seasons=Saison
 metatag.size=Größe
 metatag.sorttitle=Sortierungstitel
 metatag.source=Herkunft
 metatag.spokenlanguages=Sprache(n)
 metatag.status=Status
+metatag.stream=Stream
 metatag.studio=Studio
+metatag.subtitle=Untertitel
 metatag.subtitles=Untertitel
 metatag.tagline=kurze Inhaltsangabe
 metatag.tags=Markierungen
 metatag.title=Titel
 metatag.tmdb=TMDB Id
 metatag.tvdb=TvDB ID
+metatag.tvshow=TV Show
+metatag.tvshows=TV Shows
 metatag.trailer=Film Trailer
 metatag.url=Url
-metatag.videobitrate=VBitrate
-metatag.videocodec=VCodec
+metatag.video=Video
 metatag.watched=bereits angesehen
 metatag.writer=Drehbuch
 metatag.year=Jahr
 metatag.mediainformation=Medien Informationen
+metatag.mediafiles=Mediendateien
 metatag.trailer=Film Trailer
 
+mediafiletype.unknown=Unbekannt
+mediafiletype.video=Video
+mediafiletype.audio=Audio
+mediafiletype.subtitle=Untertitel
+mediafiletype.nfo=INFO
+mediafiletype.poster=Poster
+mediafiletype.fanart=Fanart
+mediafiletype.banner=Banner
+mediafiletype.thumb=Thumb
+mediafiletype.trailer=Trailer
+mediafiletype.extrafanart=Extrafanart
+mediafiletype.graphic=Grafik
+mediafiletype.movie=Film
+mediafiletype.episode=Episode
+
 chooser.nothingfound=nichts gefunden
-chooser.scrapeing=Scrapen:
-chooser.searchingfor=Suchen nach: 
+chooser.scrapeing=Scrapen\:
+chooser.searchingfor=Suchen nach\:
 chooser.searchresult=Suchergebnis
 chooser.scrape=Scrape folgende Daten
 
