fixed some minor points from feedback

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -337,6 +337,7 @@ chooser.searchresult=Search result
 chooser.scrape=Scrape following items
 
 moviechooser.search=Search movie
+tvshowchooser.search=Search TV show
 
 movieextendedsearch.options=Extended filter and sort options
 movieextendedsearch.filterby=filter by
