rework MovieRenamer completely

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -318,7 +318,7 @@ mediafiletype.unknown=Unbekannt
 mediafiletype.video=Video
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Untertitel
-mediafiletype.nfo=INFO
+mediafiletype.nfo=Info
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
