--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -59,7 +59,7 @@ movie.scrape.unscraped.desc=Alle ungescrapten Filme suchen & scrapen - nimm best
 movie.scrape.metadata=Metadaten von ausgewählten Filmen scrapen
 movie.scrape.metadata.desc=Metadaten von ausgewählten Filmen scrapen
 movie.remove=Ausgewählte Filme entfernen
-movie.rename=Ausgewählte Filme umbenennen
+movie.rename=Umbenennen / Cleanup ausgewählter Filme
 movie.updatemediainfo=Medianinformationen aus ausgewählten Filmen neu einlesen
 movie.bulkedit=Mehrfach bearbeiten
 movie.bulkedit.desc=Ändere Genres, Markierungen, Film Sets und gesehen/ungesehen für alle selektierten Filme
@@ -215,6 +215,7 @@ Settings.nfoFormat=NFO Format
 Settings.nofFileNaming=NFO Dateiname
 Settings.videofiletypes=Film Dateierweiterungen
 Settings.extrafiletypes=Untertitel Dateierweiterungen
+Settings.audiofiletypes=Audio Dateitypen
 Settings.sorting=Titel sortierung
 Settings.sorting.info=Präfix auswählen, welcher die Sortierung der Liste beeinflusst.\n\nZum Beispiel\: Die\n'Die Bourne Identität' wird als 'Bourne Identität, Die' angezeigt/einsortiert\n\nUm dieses Feature auszuschalten, einfach alle Einträge der Liste entfernen.
 Settings.renamer=Film Dateien umbenennen
@@ -336,6 +337,7 @@ chooser.searchresult=Suchergebnis
 chooser.scrape=Scrape folgende Daten
 
 moviechooser.search=Film suchen
+tvshowchooser.search=Suche TV Show
 
 movieextendedsearch.options=Erweiterte Filter und Sortierungsmöglichkeiten
 movieextendedsearch.filterby=filtern nach
