email is now also in bug report panel

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -141,7 +141,9 @@ sort.descending=Descending
 tmdb.wrongformat=wrong format: TMDB Id
 
 BugReport=Report a bug
-BugReport.name=Name (optional)
+BugReport.name=Name
+BugReport.email=Email
+BugReport.email.description=Please enter a valid email. We may need to contact you to get more information
 BugReport.description=Description
 BugReport.description.empty=No description provided
 BugReport.attachments=Attachments
