live preview of renamer complete

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -225,7 +225,8 @@ Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
 
 Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$Y = Year\r\n$I = IMDB number\r\n$E = Sort title\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
-Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nExample:\nDatasource = /media/movies\nFolder name = $1/$T [$Y]\nFile name = $T\n\nResult:\nFolder name = /media/movies/A/Aladdin [1992]/\nFile name = Aladdin.avi\n\n\n\nIf fields are empty, the renaming will be skipped!
+Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
+Settings.movie.renamer.nomovie=at least one movie is needed for the example
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
