implemented logging window

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -351,3 +351,5 @@ movieextendedsearch.cast=Cast member
 movieextendedsearch.tag=Tag
 movieextendedsearch.movieset=Movies in movieset
 movieextendedsearch.sortby=sort by
+
+logwindow.title=Logs
