added tv show episode modification in tv show editor (incomplete - lost focus is necessary) little changes popupmessage

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -250,6 +250,8 @@ tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched fla
 tvshow.scrapeepisodeseasondata=Scrape season & episode data 
 
 tvshowepisode.scrape=Scrape episode metadata
+tvshowepisode.clone=Clone episode
+tvshowepisode.remove=Remove episode
 
 # metatags
 metatag.actors=Actors
