added some messages (mainly for UI)

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -355,3 +355,25 @@ movieextendedsearch.movieset=Movies in movieset
 movieextendedsearch.sortby=sort by
 
 logwindow.title=Logs
+
+message.nfo.writeerror=Writing NFO failed{} {}
+message.nfo.readerror=Parsing NFO failed
+
+message.extraimage.threadcrashed=Downloading of extra images failed
+
+message.mediainfo.threadcrashed=Getting media info failed
+
+message.renamer.threadcrashed=Renaming failed
+message.renamer.failedrename=Failed to rename{} {}
+
+message.scrape.metadatamoviefailed=Failed to set metadata for movie
+message.scrape.movieartworkfailed=Failed getting artwork for movie
+message.scrape.movietrailerfailed=Failed getting trailers for movie
+message.scrape.threadcrashed=Scraping failed
+
+message.update.threadcrashed=Updating datasources failed
+message.update.errormoviedir=Failed parsing movie directory{} {}  
+
+message.database.loadmovies=Could not load movies from database
+
+message.movie.searcherror=Search movie failed{} {}  
