added some more messages tweaked popup message

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -38,6 +38,7 @@ tmm.debug=Debug
 tmm.about=About
 tmm.donate=Donate
 tmm.searchfield=Search...
+tmm.errorlogs=Show error log
 
 status.activethreads=active threads
 status.queuesize=Queue:
@@ -354,26 +355,34 @@ movieextendedsearch.tag=Tag
 movieextendedsearch.movieset=Movies in movieset
 movieextendedsearch.sortby=sort by
 
-logwindow.title=Logs
+logwindow.title=Error logs
 
 message.nfo.writeerror=Writing NFO failed{} {}
 message.nfo.readerror=Parsing NFO failed
 
-message.extraimage.threadcrashed=Downloading of extra images failed
+message.extraimage.threadcrashed=Downloading of extra images failed{} {}
 
-message.mediainfo.threadcrashed=Getting media info failed
+message.mediainfo.threadcrashed=Getting media info failed{} {}
 
-message.renamer.threadcrashed=Renaming failed
+message.renamer.threadcrashed=Renaming failed{} {}
 message.renamer.failedrename=Failed to rename{} {}
 
 message.scrape.metadatamoviefailed=Failed to set metadata for movie
+message.scrape.metadatatvshowfailed=Failed to set metadata for tv show
 message.scrape.movieartworkfailed=Failed getting artwork for movie
+message.scrape.tvshowartworkfailed=Failed getting artwork for tv show
 message.scrape.movietrailerfailed=Failed getting trailers for movie
-message.scrape.threadcrashed=Scraping failed
+message.scrape.threadcrashed=Scraping failed{} {}
 
-message.update.threadcrashed=Updating datasources failed
+message.artwork.threadcrashed=Downloading artwork failed{} {}
+
+message.update.threadcrashed=Updating datasources failed{} {}
 message.update.errormoviedir=Failed parsing movie directory{} {}  
 
 message.database.loadmovies=Could not load movies from database
+message.database.loadtvshows=Could not load tv shows from database
+
+message.config.loadsettingserror=Loading settings failed{} {}
+message.config.savesettingserror=Saving settings failed{} {}
 
 message.movie.searcherror=Search movie failed{} {}  
