added play buttons for video files and trailer added linux fallback, if Desktop is not supported (eg xfce, ..)

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -385,4 +385,7 @@ message.database.loadtvshows=Could not load tv shows from database
 message.config.loadsettingserror=Loading settings failed{} {}
 message.config.savesettingserror=Saving settings failed{} {}
 
-message.movie.searcherror=Search movie failed{} {}  
+message.movie.searcherror=Search movie failed{} {}
+message.erroropenfile=Could not open file{} {}
+message.erroropenfolder=Could not open folder{} {}
+message.erroropenurl=Could not open URL{} {}  
