--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -356,6 +356,7 @@ movieextendedsearch.movieset=Movies in movieset
 movieextendedsearch.sortby=sort by
 
 logwindow.title=Error logs
+summarywindow.title=Summary
 
 message.nfo.writeerror=Writing NFO failed{} {}
 message.nfo.readerror=Parsing NFO failed
