--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -46,6 +46,7 @@ status.queuesize=Queue:
 # menu & popup on rightclick
 onlyoneoperation=Only one operation at one time is allowed
 update.datasource=Update data sources
+update.datasource.unavailable=Datasource {} not available - skipping 
 export.detail=Template contains detail pages
 export.setdestination=Set export destination
 export.selectdirectory=select export directory
