--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -38,6 +38,7 @@ tmm.debug=Debug
 tmm.about=Über
 tmm.donate=Spenden
 tmm.searchfield=Suchen...
+tmm.errorlogs=Zeige Fehlerbericht
 
 status.activethreads=laufende Aufgaben
 status.queuesize=Warteschlange\:
@@ -45,6 +46,7 @@ status.queuesize=Warteschlange\:
 # menu & popup on rightclick
 onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden
 update.datasource=Filmverzeichnis neu einlesen
+update.datasource.unavailable=Datenordner {} nicht verfügbar - überspringe
 export.detail=Vorlage beinhaltet Film Detailseiten
 export.setdestination=Verzeichnis auswählen
 export.selectdirectory=Wähle Verzeichnis für den Export
@@ -141,7 +143,9 @@ sort.descending=absteigend
 tmdb.wrongformat=TMDB Id hat falsches Format\:
 
 BugReport=Fehler melden
-BugReport.name=Name (optional)
+BugReport.name=Name
+BugReport.email=eMail
+BugReport.email.description=Bitte gib eine gültige eMail an. Möglicherweise haben wir noch Rückfragen.
 BugReport.description=Beschreibung
 BugReport.description.empty=Keine Beschreibung eingegeben
 BugReport.attachments=Anhang
@@ -223,7 +227,8 @@ Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
 
 Settings.movie.renamer.info=Verfügbare Werte\r\n$T \= Titel\r\n$O \= Original Titel\r\n$1 \= Erster Buchstabe des Titels\r\n$Y \= Jahr\r\n$I \= IMDB Nummer\r\n$E \= Titel sortiert (s.r.)\r\n$R \= Video Auflösung\r\n$A \= Audio Codec + Kanäle\r\n$V \= Video Codec + Format
-Settings.movie.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel\:\nFilmverzeichnis \= C\:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname \= $T\n\nErgebnis\:\nVerzeichnis \= C\:\\Filme\\A\\Aladdin [1992]\nDateiname \= Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
+Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
+Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
@@ -247,6 +252,8 @@ tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewäh
 tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
+tvshowepisode.clone=Episode kopieren
+tvshowepisode.remove=Episode entfernen
 
 # metatags
 metatag.actors=Schauspieler
@@ -348,3 +355,39 @@ movieextendedsearch.cast=Besetzung
 movieextendedsearch.tag=Markierung
 movieextendedsearch.movieset=Filme in Filmsets
 movieextendedsearch.sortby=sortiert nach
+
+logwindow.title=Fehlerbericht
+summarywindow.title=Zusammenfassung
+
+message.nfo.writeerror=Fehler beim Schreiben der NFO {} {}
+message.nfo.readerror=Fehler beim Lesen der NFO
+
+message.extraimage.threadcrashed=Fehler beim Herunterladen der Extra Bilder {} {}
+
+message.mediainfo.threadcrashed=Fehler beim AUslesen der Medieninformationen {} {}
+
+message.renamer.threadcrashed=Fehler beim Umbenennen {} {}
+message.renamer.failedrename=Fehler beim Umbenennen {} {}
+
+message.scrape.metadatamoviefailed=Fehler beim Schreiben der Metadaten
+message.scrape.metadatatvshowfailed=Fehler beim Schreiben der Metadaten
+message.scrape.movieartworkfailed=Fehler beim Holen der Artworks
+message.scrape.tvshowartworkfailed=Fehler beim Herunterladen der Artwork Bilder
+message.scrape.movietrailerfailed=Fehler beim Holen der Trailer
+message.scrape.threadcrashed=Fehler beim Scrapen {} {}
+
+message.artwork.threadcrashed=Fehler beim Herunterladen von Artwork {} {}
+
+message.update.threadcrashed=Fehler beim Updaten des Datenordners {} {}
+message.update.errormoviedir=Fehler beim Auslesen des Filmverzeichnisses {} {}
+
+message.database.loadmovies=Konnte keine Filme aus der DB laden
+message.database.loadtvshows=Konnte keine TV-Shows aus der DB laden
+
+message.config.loadsettingserror=Fehler beim Laden der Einstellungen {} {}
+message.config.savesettingserror=Fehler beim Speichern der Einstellungen {} {}
+
+message.movie.searcherror=Fehler beim Suchen {} {}
+message.erroropenfile=Konnte Datei {} nicht öffnen {}
+message.erroropenfolder=Konnte Ordner {} nicht öffnen {}
+message.erroropenurl=Konnte URL {} nicht öffnen {}
