--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -226,9 +226,10 @@ Settings.renamer=Renamer
 Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
 
-Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$Y = Year\r\n$I = IMDB number\r\n$E = Sort title\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
+Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$Y = Year\r\n$M = Movie set title\r\n$I = IMDB number\r\n$E = Sort title\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
 Settings.movie.renamer.nomovie=at least one movie is needed for the example
+Settings.movie.renamer.spacesubstitution=Replace spaces with underscores
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
