--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -226,9 +226,10 @@ Settings.renamer=Film Dateien umbenennen
 Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
 
-Settings.movie.renamer.info=Verfügbare Werte\r\n$T \= Titel\r\n$O \= Original Titel\r\n$1 \= Erster Buchstabe des Titels\r\n$Y \= Jahr\r\n$I \= IMDB Nummer\r\n$E \= Titel sortiert (s.r.)\r\n$R \= Video Auflösung\r\n$A \= Audio Codec + Kanäle\r\n$V \= Video Codec + Format
+Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$Y \= Jahr\n$M \= Filmset Titel\n$I \= IMDB Nummer\n$E \= Titel sortiert\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
+Settings.movie.renamer.spacesubstitution=Leerzeichen mit _ ersetzen
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
