--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -250,7 +250,8 @@ tvshow.changeseasonposter=Change season poster of selected season(s)
 tvshow.change=Change TV show
 tvshow.bulkedit=Bulk editing
 tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes 
-tvshow.scrapeepisodeseasondata=Scrape season & episode data 
+tvshow.scrapeepisodeseasondata=Scrape season & episode data
+tvshow.update=Update TV show 
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
