added common copy/paste/cut functions to every jtextcomponent

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -13,6 +13,10 @@ Button.save=Save
 Button.scrape=Scrape
 Button.edit=Edit
 
+menuitem.cut=Cut
+menuitem.copy=Copy
+menuitem.paste=Paste
+
 # vertical tabs (singular / plural)
 tmm.movies=Movies
 tmm.movie=Movie
