feature: rewrite NFO files for movies/tv shows/episodes

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -69,6 +69,7 @@ movie.rename=Rename/cleanup selected movie(s)
 movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
 movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
+movie.rewritenfo=Rewrite NFO for selected movie(s)
 
 movie.export=Export selected movie(s)
 
@@ -256,10 +257,12 @@ tvshow.bulkedit=Bulk editing
 tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes 
 tvshow.scrapeepisodeseasondata=Scrape season & episode data
 tvshow.update=Update TV show 
+tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
 tvshowepisode.remove=Remove episode
+tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
 
 # metatags
 metatag.actors=Actors
