--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -64,6 +64,7 @@ movie.scrape.unscraped=Search & scrape all unscraped movie(s) - force best match
 movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user interaction; forces best match
 movie.scrape.metadata=Scrape metadata for selected movie(s)
 movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
+movie.scrape.nomatchfound=No suitable movie found during search 
 movie.remove=Remove selected movie(s)
 movie.rename=Rename/cleanup selected movie(s)
 movie.updatemediainfo=Update media information of selected movie(s)
